<resources>
    <string name="app_name">My Application</string>
    <string name="about">Буцев Богдан\nГрупа ІВ-81\nЗК ІВ-8107</string>
    <string name="title_activity_main2">Main Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="graph">Graph</string>
    <string name="diagram">Diagram</string>
    <string name="main_menu">Main menu</string>
    <string name="drawing">Drawing</string>
    <string name="book">Books</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="price">Price</string>
    <string name="add_book">Add Book</string>
    <string name="price_example">Price: $23.30</string>
    <string name="year">Year: 2013</string>
    <string name="pages">Pages: 576</string>
    <string name="description">Description: iOS Components and Frameworks will help you leverage iOS\'s powerful components and frameworks to build apps with outstanding performance, reliability, interactivity, media support, and customization.Pioneering iOS developers Kyle Richter and Joe Keeley illuminate the sophisticated intermediate-to-ad…</string>
    <string name="isbn_13">ISBN-13: 9780321856715</string>
    <string name="authors">Authors: Kyle Richter, Joe Keeley</string>
    <string name="rate">Rating: 3/5</string>
    <string name="publisher">Publisher: Addison-Wesley</string>
    <string name="subtitle_example">Subtitle: Understanding the Advanced Features of the iOS SDK</string>
    <string name="title_example">Title: iOS Components and Frameworks</string>
    <string name="gallery">Gallery</string>
    <string name="todo">TODO</string>
</resources>