<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/outline_all_inbox_24"
            android:text="@string/main_menu" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/outline_all_inbox_24"
            android:text="@string/drawing" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsDraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabDraw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabDraw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagram" />

    </com.google.android.material.tabs.TabLayout>

    <ua.kpi.comsys.iv8107.DrawingView
        android:id="@+id/draw_fragment"
        style="@style/Widget.Theme.MyApplication.MyView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:paddingStart="40dp"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="50dp"
        android:paddingBottom="50dp"
        app:exampleDimension="24sp"
        app:exampleString="Hello, DrawingView"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabsDraw" />


</androidx.constraintlayout.widget.ConstraintLayout>